/*
 * $Id$
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 16:55 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

/*
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 Old changelogs are archived in directory
 "oldlogs".
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
*/



2025-03-28 20:57 UTC+0100 Wilfried Brunken DF7BE
* include/hb_missing.h (New)
* source/common/procmisc/cfuncs.c
* samples/testfunc.prg
  ! New function hwg_GetEpoch()
  ! Get recent setting of 
  ! SET EPOCH TO ..
  ! returned as integer value.
  ! More information see
  ! function docu.


2025-03-23 20:57 UTC-0200 Jose Quintas jmcquintas-gmail.com
* source/winapi/hdialog.prg
* source/winapi/hwindow.prg
  ! change test variable to HB_GUI_MT_EXPERIMENTAL
  ! update github workflows
  ! to-do: MT sample(s) and test on linux/MacOS


2025-03-17 14:50 UTC+0100 Wilfried Brunken DF7BE
* test/tickets/ticket165.hbp (New)
* test/tickets/ticket165.prg(New)
  ! Bug ticket #165:
  ! "Progress Bar 'G_IS_OBJECT (object)' failed (GTK)"
  ! With reference to closed Bug ticket #52:
  ! "Progbars doesn't work under Linux",
  ! with new sample program in
  ! samples/progressbar.
  ! It is obsolete, so closed today


2025-03-15 16:40 UTC+0100 Wilfried Brunken DF7BE
* doc/hwgdoc_classes.html
* install-macos.txt
* samples/progressbar/Readme.txt
* samples/progressbar/demo_progres.prg
  ! Bug Ticket #52:
  ! Progbars doesn't work under Linux.
  ! Now code for both LINUX and MacOS added,
  ! for details see post to ticket.
  ! Now the ticket may be ready to close.
  ! Docu updated.


2025-03-14 18:30 UTC+0100 Wilfried Brunken DF7BE
* samples/progressbar (New directory)
* samples/progressbar/Readme.txt (New)
* samples/progressbar/progress.prg (New)
* samples/progressbar/loadhex.prg (New)
* samples/progressbar/icon.png (New)
* samples/progressbar/demo_progres.prg (New)
* samples/progressbar/progress.hbp (New)